--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
     </section>
 
     <section class="galeria">
-      <img src="Imagenes/camino.jpg" alt="Galería 1">
-      <img src="Imagenes/asdfas.jpg" alt="Galería 2">
-      <img src="Imagenes/reunion.jpg" alt="Galería 3">
-      <img src="Imagenes/abrazo.jpg" alt="Galería 4">
-      <img src="Imagenes/stast.jpg" alt="Galería 5">
-      <img src="Imagenes/guia.jpg" alt="Galería 6">
+      <img src="camino.jpg" alt="Galería 1">
+      <img src="asdfas.jpg" alt="Galería 2">
+      <img src="reunion.jpg" alt="Galería 3">
+      <img src="abrazo.jpg" alt="Galería 4">
+      <img src="stast.jpg" alt="Galería 5">
+      <img src="guia.jpg" alt="Galería 6">
     </section>
 
     <section class="whatsapp">
