--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <div class="container">
     <section class="perfil">
-      <img src="Imagenes/perfil.jpg" alt="Foto de Carina Laporta">
+      <img src="perfil.jpg" alt="Foto de Carina Laporta">
       <p>"A través de la sabiduría de Oxún, te ofrezco un espacio seguro donde la paz y la prosperidad fluyen como el río. Mi misión es ayudarte a sanar, prosperar y encontrar la claridad espiritual para vivir con balance y alegría."</p>
     </section>
 
