--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section class="whatsapp">
-      <a href="https://wa.me/1234567890" target="_blank">💬 Contáctame por WhatsApp</a>
+      <a href="https://wa.me/+59899902043" target="_blank">💬 Contáctame por WhatsApp</a>
     </section>
 
     <section class="formulario">
