--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mae Carina de Oxun - Servicio Espiritual</title>
+  <title>Mae Carina de Oxun Panda - Servicio Espiritual</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Nunito:wght@300;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -130,7 +130,7 @@
 </head>
 <body>
   <header>
-    <h1>Mae Carina de Oxun</h1>
+    <h1>Mae Carina de Oxun Panda</h1>
     <p>"Con la sabiduría y amor de Oxún, guío tu camino hacia la armonía y la paz interior."</p>
   </header>
 
